[project]
name = "chat-with-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "community>=1.0.0b1",
    "langchain>=0.3.24",
    "langchain-chroma",
    "langchain-community>=0.3.22",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.1.2",
    "pypdf>=5.4.0",
    "streamlit>=1.44.1",
]
